--- a/index.html
+++ b/index.html
@@ -7,74 +7,190 @@
     <link rel="stylesheet" type="text/css" href="./stylesheets/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đăng Nhập</title>
+    <title>Dashboard</title>
 </head>
-<body class="login">
-    <div class="container-login">
-        <input type="checkbox" id="flip">
-        <div class="cover">
-            <div class="front">
-                <img src="~../../images/cover1.jpg" alt="backgroud login">
-                <div class="text">
-                    <span class="text-1">Mỗi người bạn mới là một <br> cuộc phiêu lưu mới</span>
-                    <span class="text-2">Hãy kết nối</span>
-                </div>
+<body>
+<div class="sidebar">
+    <div class="logo-details">
+        <img src="~../../images/logo.png" alt="HungTran" class="logo">
+        <span class="logo-name">Hùng Trần</span>
+    </div>
+    <ul class="nav-links">
+        <li>
+            <div class="icon-links">
+                <a href="#">
+                    <i class="fas fa-th-large"></i>
+                    <span class="links-name">Trang Chủ</span>
+                </a>
             </div>
-            <div class="back-login">
-                <img src="~../../images/cover2.png" alt="" class="backImg">
-                <div class="text">
-                    <span class="text-1">Hành trình trọn dặm <br> chỉ với 1 bước</span>
-                    <span class="text-2">Bắt đầu nào</span>
-                </div>
+        </li>
+        <li>
+            <div class="icon-links">
+                <a href="#">
+                    <i class="fas fa-archive"></i>
+                    <span class="links-name">Sản Phẩm</span>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="icon-links">
+                <a href="#">
+                    <i class="fas fa-list-ul"></i>
+                    <span class="links-name">Danh sách đặt hàng</span>
+                </a>
+                <i class="fas fa-chevron-down arrow"></i>
+            </div>
+            <ul class="sub-menu">
+                <li>
+                    <a href="#"> Sản phẩm A</a>
+                </li>
+                <li>
+                    <a href="#">Sản phẩm B</a>
+                </li>
+                <li>
+                    <a href="#">Sản phẩm C</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <div class="icon-links">
+                 <a href="#">
+                    <i class="fas fa-book"></i>
+                    <span class="links-name">Tổng đơn hàng</span>
+                </a>
+                <i class="fas fa-chevron-down arrow"></i>
+            </div>
+            <ul class="sub-menu">
+                <li>
+                    <a href="#"> Sản phẩm A</a>
+                </li>
+                <li>
+                    <a href="#">Sản phẩm B</a>
+                </li>
+                <li>
+                    <a href="#">Sản phẩm C</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <div class="icon-links">
+               <a href="#">
+                    <i class="far fa-user"></i>
+                    <span class="links-name">Team</span>
+                </a> 
+                <i class="fas fa-chevron-down arrow"></i>
+            </div>
+            <ul class="sub-menu">
+                <li>
+                    <a href="#"> Sản phẩm A</a>
+                </li>
+                <li>
+                    <a href="#">Sản phẩm B</a>
+                </li>
+                <li>
+                    <a href="#">Sản phẩm C</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <div class="icon-links">
+                <a href="#">
+                    <i class="far fa-comment-alt"></i>
+                    <span class="links-name">Messenger</span>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="icon-links">
+                <a href="#">
+                    <i class="far fa-heart"></i>
+                    <span class="links-name">Danh mục yêu thích</span>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="icon-links">
+                <a href="#">
+                    <i class="fas fa-cog"></i>
+                    <span class="links-name">Setting</span>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="icon-links">
+                <a href="#">
+                    <i class="fas fa-sign-out-alt"></i>
+                    <span class="links-name">Đăng xuất</span>
+                </a>
+            </div>
+        </li>
+    </ul>
+</div>
+<section class="home-section">
+    <nav>
+        <div class="sidebar-button">
+            <i class="fas fa-bars"></i>
+            <span class="dashboard">dashboard</span>
+        </div>
+        <div class="search-box">
+            <input type="checkbox" id="check">
+            <div class="search-box--icon">
+              <input type="text" placeholder="Tìm kiếm...">
+              <label for="check" class="icon">
+                <i class="fas fa-search"></i>
+              </label>
             </div>
         </div>
-        <div class="forms">
-            <div class="form-content">
-                <div class="login-form">
-                    <div class="title">Login</div>
-                    <form action="#" method="post">
-                        <div class="input-boxes">
-                            <div class="input-box">
-                                <i class="fas fa-envelope"></i>
-                              <input type="text" placeholder="Tên đăng nhập" required>
-                            </div>
-                            <div class="input-box">
-                              <i class="fas fa-lock"></i>
-                              <input type="password"  name="" id="#" placeholder="Mật khẩu" required>
-                            </div>
-                            <div class="text"><a href="#">Quên mật khẩu?</a></div>
-                            <div class="button button-box">
-                                <input class="btn-submit" type="submit" value="Đăng Nhập">
-                            </div>
-                            <div class="text sign-up-text">Tôi không có tài khoản?<label for="flip">Đăng ký ngay</label></div>
-                        </div>
-                    </form>
-                </div>
-                <div class="signup-form">
-                    <div class="title">Đăng Ký</div>
-                    <form action="#" method="post">
-                        <div class="input-boxes">
-                            <div class="input-box">
-                              <i class="fas fa-user"></i>
-                              <input type="text" placeholder="Nhập tên của bạn" required>
-                            </div>
-                            <div class="input-box">
-                              <i class="fas fa-envelope"></i>
-                              <input class="email" type="text" placeholder="Nhập địa chỉ mail" required>
-                            </div>
-                            <div class="input-box">
-                              <i class="fas fa-lock"></i>
-                              <input type="password" placeholder="Enter your password" required>
-                            </div>
-                            <div class="button button-box">
-                                <input class="btn-submit" type="submit" value="Đăng Ký">
-                            </div>
-                            <div class="text sign-up-text">Tôi đã có tài khoản? <label for="flip">Đăng nhập ngay</label></div>
-                          </div>
-                    </form>
-                </div>
-            </div>
+        <div class="profile-details">
+            <img src="~../../images/cover2.jpg" alt="avata">
+            <span class="account-name">Trần Hùng</span>
+            <i class="fas fa-chevron-down arrow" title="Share"></i>
+        </div>
+    </nav>
+    <div class="home-content">
+        <div class="overview-boxes">
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+        </div>
+        <div class="sales-boxes">
         </div>
     </div>
+    <div class="share">
+        <i class="fas fa-share-alt"></i>
+    </div>
+    <div class="messenger-face">
+        <i class="fab fa-facebook-messenger"></i>
+        <!-- Messenger Plugin chat Code -->
+        <div id="fb-root"></div>
+
+        <!-- Your Plugin chat code -->
+        <div id="fb-customer-chat" class="fb-customerchat">
+        </div>
+
+        <script>
+        var chatbox = document.getElementById('fb-customer-chat');
+        chatbox.setAttribute("page_id", "104450664936276");
+        chatbox.setAttribute("attribution", "biz_inbox");
+
+        window.fbAsyncInit = function() {
+            FB.init({
+            xfbml            : true,
+            version          : 'v12.0'
+            });
+        };
+
+        (function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = 'https://connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js';
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+        </script>
+    </div>
+</section>
+<script src="~../../js/script.js"></script>
 </body>
 </html>
